Fix dark mode bootstrap issue

--- a/src/sass/base/_variables.scss
+++ b/src/sass/base/_variables.scss
@@ -4,3 +4,5 @@ $theme-colors: (
   'secondary': #444f5a,
   'accent': #0564bd
 );
+
+$enable-dark-mode: false;
